# TODO(#1532): Rename file to 'BUILD' post-Gradle.
"""
This library contains the app's core source files and functionality.
Note that:
 - Most files should be built inside of app library. However, listener files, annotation
files, view files, view model files, and binding adapter files need to be manually added. The
documentation below specifies where these files should be added.
- If your file uses Data-binding views or Kotlin synthetic imports these must be removed in
order to build with Bazel.
- All binding adapters must be written in Java.
"""

load("@tools_android//tools/crashlytics:defs.bzl", "crashlytics_android_library")
load("@tools_android//tools/googleservices:defs.bzl", "google_services_xml")
load("//defs:oppia_android_library.bzl", "oppia_android_library", "oppia_android_resource_library")
load("//defs:oppia_android_test.bzl", "oppia_android_test")

filegroup(
    name = "databinding_layouts",
    srcs = glob(["src/main/res/layout*/**"]),
    visibility = ["//app/src/main/java/org/oppia/android/app/databinding:__pkg__"],
)

# Corresponds to being accessible to all app layer targets.
package_group(
    name = "app_visibility",
    packages = [
        "//app",
        "//app/...",
    ],
)

# Visibility for app tests.
package_group(
    name = "app_testing_visibility",
    packages = [
        "//app",
        "//app/src/main/java/org/oppia/android/app/notice/testing",
        "//app/src/main/java/org/oppia/android/app/player/exploration/testing",
        "//app/src/main/java/org/oppia/android/app/player/state/testing",
        "//app/src/main/java/org/oppia/android/app/testing",
        "//app/src/sharedTest/...",
        "//app/src/test/...",
    ],
)

filegroup(
    name = "manifest",
    srcs = ["src/main/AndroidManifest.xml"],
    visibility = [
        "//:oppia_binary_visibility",
        "//app/src/main/java/org/oppia/android/app/databinding:__pkg__",
    ],
)

# Library for non-layout resource files.
oppia_android_resource_library(
    name = "resources",
    resource_files = glob(
        ["src/main/res/**"],
        exclude = ["src/main/res/layout*/**"],
    ),
    visibility = [
        "//:oppia_binary_visibility",
        "//:oppia_testing_visibility",
        "//app:app_visibility",
        "//instrumentation:__pkg__",
    ],
    deps = ["//third_party:com_google_android_material_material"],
)

# TODO(#1607): Remove this shared library once everything is modularized.
oppia_android_library(
    name = "_combined_test_lib_do_not_depend",
    testonly = True,
    srcs = glob([
        "src/test/java/org/oppia/android/app/**/*Test.kt",
        "src/sharedTest/java/org/oppia/android/app/**/*Test.kt",
    ]),
    android_merge_deps = [
        ":crashlytics_deps",
        "//app/src/main/java/org/oppia/android/app/databinding:databinding_resources",
        "//config/src/java/org/oppia/android/config:all_languages_config",
        "//domain:assets",
    ],
    deps = [
        "//:dagger",
        "//app/src/main/java/org/oppia/android/app/activity:activity_component",
        "//app/src/main/java/org/oppia/android/app/activity:activity_component_factory",
        "//app/src/main/java/org/oppia/android/app/activity:activity_component_impl",
        "//app/src/main/java/org/oppia/android/app/activity/route:activity_router_module",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:administrator_controls_activity",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:load_app_version_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:load_learner_analytics_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:load_profile_edit_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:load_profile_list_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:profile_edit_deletion_dialog_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:route_to_app_version_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:route_to_learner_analytics_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:route_to_profile_list_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols:show_logout_dialog_listener",
        "//app/src/main/java/org/oppia/android/app/administratorcontrols/appversion:app_version_activity",
        "//app/src/main/java/org/oppia/android/app/application:application_component",
        "//app/src/main/java/org/oppia/android/app/application:application_injector",
        "//app/src/main/java/org/oppia/android/app/application:application_injector_provider",
        "//app/src/main/java/org/oppia/android/app/application:modules",
        "//app/src/main/java/org/oppia/android/app/application/testing:testing_build_flavor_module",
        "//app/src/main/java/org/oppia/android/app/completedstorylist:completed_story_list_activity",
        "//app/src/main/java/org/oppia/android/app/completedstorylist:completed_story_list_fragment",
        "//app/src/main/java/org/oppia/android/app/customview:lesson_thumbnail_image_view",
        "//app/src/main/java/org/oppia/android/app/customview/interaction:ratio_input_interaction_view",
        "//app/src/main/java/org/oppia/android/app/devoptions:developer_options_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions:developer_options_module",
        "//app/src/main/java/org/oppia/android/app/devoptions:developer_options_starter_module",
        "//app/src/main/java/org/oppia/android/app/devoptions:force_crash_button_click_listener",
        "//app/src/main/java/org/oppia/android/app/devoptions:route_to_force_network_type_listener",
        "//app/src/main/java/org/oppia/android/app/devoptions:route_to_mark_chapters_completed_listener",
        "//app/src/main/java/org/oppia/android/app/devoptions:route_to_mark_stories_completed_listener",
        "//app/src/main/java/org/oppia/android/app/devoptions:route_to_mark_topics_completed_listener",
        "//app/src/main/java/org/oppia/android/app/devoptions:route_to_math_expression_parser_test_listener",
        "//app/src/main/java/org/oppia/android/app/devoptions:route_to_view_event_logs_listener",
        "//app/src/main/java/org/oppia/android/app/devoptions/forcenetworktype:force_network_type_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/forcenetworktype/testing:force_network_type_test_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/markchapterscompleted:mark_chapters_completed_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/markchapterscompleted/testing:mark_chapters_completed_test_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/markstoriescompleted:mark_stories_completed_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/markstoriescompleted/testing:mark_stories_completed_test_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/marktopicscompleted:mark_topics_completed_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/marktopicscompleted/testing:mark_topics_completed_test_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/mathexpressionparser:math_expression_parser_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/testing:developer_options_test_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/vieweventlogs:view_event_logs_activity",
        "//app/src/main/java/org/oppia/android/app/devoptions/vieweventlogs/testing:view_event_logs_test_activity",
        "//app/src/main/java/org/oppia/android/app/drawer:navigation_drawer_fragment_presenter",
        "//app/src/main/java/org/oppia/android/app/drawer:navigation_drawer_item",
        "//app/src/main/java/org/oppia/android/app/fragment:injectable_dialog_fragment",
        "//app/src/main/java/org/oppia/android/app/help:help_activity",
        "//app/src/main/java/org/oppia/android/app/help:load_faq_list_fragment_listener",
        "//app/src/main/java/org/oppia/android/app/help:load_license_list_fragment_listener",
        "//app/src/main/java/org/oppia/android/app/help:load_license_text_viewer_fragment_listener",
        "//app/src/main/java/org/oppia/android/app/help:load_policies_fragment_listener",
        "//app/src/main/java/org/oppia/android/app/help:load_third_party_dependency_list_fragment_listener",
        "//app/src/main/java/org/oppia/android/app/help:route_to_faq_list_listener",
        "//app/src/main/java/org/oppia/android/app/help:route_to_third_party_dependency_list_listener",
        "//app/src/main/java/org/oppia/android/app/help/faq:faq_list_activity",
        "//app/src/main/java/org/oppia/android/app/help/faq:route_to_faq_single_listener",
        "//app/src/main/java/org/oppia/android/app/help/faq/faqsingle:faq_single_activity",
        "//app/src/main/java/org/oppia/android/app/help/thirdparty:license_list_activity",
        "//app/src/main/java/org/oppia/android/app/help/thirdparty:license_text_viewer_activity",
        "//app/src/main/java/org/oppia/android/app/help/thirdparty:route_to_license_list_listener",
        "//app/src/main/java/org/oppia/android/app/help/thirdparty:route_to_license_text_listener",
        "//app/src/main/java/org/oppia/android/app/help/thirdparty:third_party_dependency_list_activity",
        "//app/src/main/java/org/oppia/android/app/hintsandsolution:hints_and_solution_dialog_fragment",
        "//app/src/main/java/org/oppia/android/app/hintsandsolution:hints_and_solution_dialog_fragment_presenter",
        "//app/src/main/java/org/oppia/android/app/hintsandsolution:hints_and_solution_listener",
        "//app/src/main/java/org/oppia/android/app/hintsandsolution:reveal_hint_listener",
        "//app/src/main/java/org/oppia/android/app/home:home_activity",
        "//app/src/main/java/org/oppia/android/app/home:home_fragment",
        "//app/src/main/java/org/oppia/android/app/home:home_item_view_model",
        "//app/src/main/java/org/oppia/android/app/home:route_to_exploration_listener",
        "//app/src/main/java/org/oppia/android/app/home:route_to_recently_played_listener",
        "//app/src/main/java/org/oppia/android/app/home:route_to_topic_listener",
        "//app/src/main/java/org/oppia/android/app/home:route_to_topic_play_story_listener",
        "//app/src/main/java/org/oppia/android/app/home:welcome_view_model",
        "//app/src/main/java/org/oppia/android/app/home/promotedlist:promoted_story_list_view_model",
        "//app/src/main/java/org/oppia/android/app/home/promotedlist:promoted_story_view_model",
        "//app/src/main/java/org/oppia/android/app/home/recentlyplayed:promoted_story_click_listener",
        "//app/src/main/java/org/oppia/android/app/home/recentlyplayed:recently_played_activity",
        "//app/src/main/java/org/oppia/android/app/home/recentlyplayed:recently_played_fragment",
        "//app/src/main/java/org/oppia/android/app/home/topiclist:topic_summary_click_listener",
        "//app/src/main/java/org/oppia/android/app/home/topiclist:topic_summary_view_model",
        "//app/src/main/java/org/oppia/android/app/mydownloads:my_downloads_activity",
        "//app/src/main/java/org/oppia/android/app/mydownloads:my_downloads_tab",
        "//app/src/main/java/org/oppia/android/app/onboarding:onboarding_activity",
        "//app/src/main/java/org/oppia/android/app/onboarding:route_to_profile_list_listener",
        "//app/src/main/java/org/oppia/android/app/ongoingtopiclist:ongoing_topic_list_activity",
        "//app/src/main/java/org/oppia/android/app/ongoingtopiclist:ongoing_topic_list_fragment",
        "//app/src/main/java/org/oppia/android/app/options:app_language_activity",
        "//app/src/main/java/org/oppia/android/app/options:app_language_selection_listener",
        "//app/src/main/java/org/oppia/android/app/options:audio_language_activity",
        "//app/src/main/java/org/oppia/android/app/options:audio_language_selected_listener",
        "//app/src/main/java/org/oppia/android/app/options:load_app_language_list_listener",
        "//app/src/main/java/org/oppia/android/app/options:load_audio_language_list_listener",
        "//app/src/main/java/org/oppia/android/app/options:load_reading_text_size_listener",
        "//app/src/main/java/org/oppia/android/app/options:options_activity",
        "//app/src/main/java/org/oppia/android/app/options:reading_text_size_activity",
        "//app/src/main/java/org/oppia/android/app/options:route_to_app_language_list_listener",
        "//app/src/main/java/org/oppia/android/app/options:route_to_audio_language_list_listener",
        "//app/src/main/java/org/oppia/android/app/options:route_to_reading_text_size_listener",
        "//app/src/main/java/org/oppia/android/app/options:text_size_selected_listener",
        "//app/src/main/java/org/oppia/android/app/parser:fraction_parsing_ui_error",
        "//app/src/main/java/org/oppia/android/app/parser:string_to_ratio_parser",
        "//app/src/main/java/org/oppia/android/app/player/audio:audio_button_listener",
        "//app/src/main/java/org/oppia/android/app/player/exploration:bottom_sheet_options_menu_item_click_listener",
        "//app/src/main/java/org/oppia/android/app/player/exploration:default_font_size_state_listener",
        "//app/src/main/java/org/oppia/android/app/player/exploration:exploration_activity",
        "//app/src/main/java/org/oppia/android/app/player/exploration:hints_and_solution_exploration_manager_listener",
        "//app/src/main/java/org/oppia/android/app/player/exploration:request_voice_over_icon_spotlight_listener",
        "//app/src/main/java/org/oppia/android/app/player/state/itemviewmodel:fraction_interaction_view_model",
        "//app/src/main/java/org/oppia/android/app/player/state/itemviewmodel:numeric_input_view_model",
        "//app/src/main/java/org/oppia/android/app/player/state/itemviewmodel:ratio_expression_input_interaction_view_model",
        "//app/src/main/java/org/oppia/android/app/player/state/itemviewmodel:split_screen_interaction_module",
        "//app/src/main/java/org/oppia/android/app/player/state/itemviewmodel:state_item_view_model",
        "//app/src/main/java/org/oppia/android/app/player/state/itemviewmodel:text_input_view_model",
        "//app/src/main/java/org/oppia/android/app/player/state/listener:route_to_hints_and_solution_listener",
        "//app/src/main/java/org/oppia/android/app/player/state/listener:state_keyboard_button_listener",
        "//app/src/main/java/org/oppia/android/app/player/state/testing:state_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/player/stopplaying:restart_playing_session_listener",
        "//app/src/main/java/org/oppia/android/app/player/stopplaying:stop_state_playing_session_listener",
        "//app/src/main/java/org/oppia/android/app/player/stopplaying:stop_state_playing_session_with_saved_progress_listener",
        "//app/src/main/java/org/oppia/android/app/policies:policies_activity",
        "//app/src/main/java/org/oppia/android/app/policies:route_to_policies_listener",
        "//app/src/main/java/org/oppia/android/app/profile:add_profile_activity",
        "//app/src/main/java/org/oppia/android/app/profile:admin_auth_activity",
        "//app/src/main/java/org/oppia/android/app/profile:admin_auth_enum",
        "//app/src/main/java/org/oppia/android/app/profile:admin_pin_activity",
        "//app/src/main/java/org/oppia/android/app/profile:pin_password_activity",
        "//app/src/main/java/org/oppia/android/app/profile:profile_chooser_activity",
        "//app/src/main/java/org/oppia/android/app/profile:profile_chooser_fragment",
        "//app/src/main/java/org/oppia/android/app/profile:route_to_admin_pin_listener",
        "//app/src/main/java/org/oppia/android/app/profileprogress:profile_picture_activity",
        "//app/src/main/java/org/oppia/android/app/profileprogress:profile_picture_click_listener",
        "//app/src/main/java/org/oppia/android/app/profileprogress:profile_progress_activity",
        "//app/src/main/java/org/oppia/android/app/profileprogress:profile_progress_fragment",
        "//app/src/main/java/org/oppia/android/app/profileprogress:route_to_completed_story_list_listener",
        "//app/src/main/java/org/oppia/android/app/profileprogress:route_to_ongoing_topic_list_listener",
        "//app/src/main/java/org/oppia/android/app/recyclerview:drag_and_drop_item_facilitator",
        "//app/src/main/java/org/oppia/android/app/recyclerview:on_drag_ended_listener",
        "//app/src/main/java/org/oppia/android/app/recyclerview:on_item_drag_listener",
        "//app/src/main/java/org/oppia/android/app/resumelesson:resume_lesson_activity",
        "//app/src/main/java/org/oppia/android/app/settings/profile:profile_edit_activity",
        "//app/src/main/java/org/oppia/android/app/settings/profile:profile_list_activity",
        "//app/src/main/java/org/oppia/android/app/settings/profile:profile_rename_activity",
        "//app/src/main/java/org/oppia/android/app/settings/profile:profile_reset_pin_activity",
        "//app/src/main/java/org/oppia/android/app/settings/profile:route_to_profile_edit_listener",
        "//app/src/main/java/org/oppia/android/app/shim:prod_modules",
        "//app/src/main/java/org/oppia/android/app/spotlight",
        "//app/src/main/java/org/oppia/android/app/spotlight:spotlight_fragment",
        "//app/src/main/java/org/oppia/android/app/story:story_activity",
        "//app/src/main/java/org/oppia/android/app/testing:administrator_controls_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:audio_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:concept_card_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:drag_drop_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:drag_drop_test_fragment",
        "//app/src/main/java/org/oppia/android/app/testing:exploration_injection_activity",
        "//app/src/main/java/org/oppia/android/app/testing:exploration_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:home_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:html_parser_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:image_region_selection_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:input_interaction_view_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:lesson_thumbnail_image_view_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:list_item_leading_margin_span_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:navigation_drawer_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:policies_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:profile_chooser_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:profile_edit_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:splash_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:splash_test_activity_presenter",
        "//app/src/main/java/org/oppia/android/app/testing:spotlight_fragment_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:test_font_scale_configuration_util_activity",
        "//app/src/main/java/org/oppia/android/app/testing:topic_for_story_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing:topic_revision_test_activity",
        "//app/src/main/java/org/oppia/android/app/testing/activity:test_activity",
        "//app/src/main/java/org/oppia/android/app/topic:route_to_question_player_listener",
        "//app/src/main/java/org/oppia/android/app/topic:route_to_resume_lesson_listener",
        "//app/src/main/java/org/oppia/android/app/topic:route_to_revision_card_listener",
        "//app/src/main/java/org/oppia/android/app/topic:route_to_story_listener",
        "//app/src/main/java/org/oppia/android/app/topic:topic_activity",
        "//app/src/main/java/org/oppia/android/app/topic:topic_tab",
        "//app/src/main/java/org/oppia/android/app/topic/conceptcard:concept_card_fragment",
        "//app/src/main/java/org/oppia/android/app/topic/conceptcard:concept_card_listener",
        "//app/src/main/java/org/oppia/android/app/topic/questionplayer:hints_and_solution_question_manager_listener",
        "//app/src/main/java/org/oppia/android/app/topic/questionplayer:question_player_activity",
        "//app/src/main/java/org/oppia/android/app/topic/revision:topic_revision_fragment",
        "//app/src/main/java/org/oppia/android/app/topic/revisioncard:return_to_topic_click_listener",
        "//app/src/main/java/org/oppia/android/app/topic/revisioncard:revision_card_activity",
        "//app/src/main/java/org/oppia/android/app/translation:app_language_locale_handler",
        "//app/src/main/java/org/oppia/android/app/translation:app_language_resource_handler",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_activity_recreator",
        "//app/src/main/java/org/oppia/android/app/translation/testing:test_module",
        "//app/src/main/java/org/oppia/android/app/utility:font_scale_configuration_util",
        "//app/src/main/java/org/oppia/android/app/utility:on_clickable_area_clicked_listener",
        "//app/src/main/java/org/oppia/android/app/utility:ratio_extensions",
        "//app/src/main/java/org/oppia/android/app/utility:region_click_event",
        "//app/src/main/java/org/oppia/android/app/utility:split_screen_manager",
        "//app/src/main/java/org/oppia/android/app/utility/datetime:date_time_util",
        "//app/src/main/java/org/oppia/android/app/walkthrough:walkthrough_activity",
        "//app/src/main/java/org/oppia/android/app/walkthrough:walkthrough_fragment_change_listener",
        "//app/src/sharedTest/java/org/oppia/android/app/recyclerview:recycler_view_matcher",
        "//app/src/sharedTest/java/org/oppia/android/app/utility:click_actions",
        "//app/src/sharedTest/java/org/oppia/android/app/utility:drag_view_action",
        "//app/src/sharedTest/java/org/oppia/android/app/utility:espresso_tests_matchers",
        "//app/src/sharedTest/java/org/oppia/android/app/utility:font_size_matcher",
        "//app/src/sharedTest/java/org/oppia/android/app/utility:orientation_change_action",
        "//app/src/sharedTest/java/org/oppia/android/app/utility:progress_matcher",
        "//data/src/main/java/org/oppia/android/data/backends/gae:network_config_annotations",
        "//data/src/main/java/org/oppia/android/data/backends/gae:network_config_prod_module",
        "//data/src/main/java/org/oppia/android/data/backends/gae:network_interceptors",
        "//data/src/main/java/org/oppia/android/data/backends/gae:oppia_retrofit",
        "//data/src/main/java/org/oppia/android/data/backends/gae:prod_module",
        "//data/src/main/java/org/oppia/android/data/backends/gae/api",
        "//domain/src/main/java/org/oppia/android/domain/audio:audio_player_controller",
        "//domain/src/main/java/org/oppia/android/domain/classify:interactions_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/algebraicexpressioninput:algebraic_expression_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/continueinteraction:continue_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/dragAndDropSortInput:drag_and_drop_sort_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/fractioninput:fraction_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/imageClickInput:image_click_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/itemselectioninput:item_selection_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/mathequationinput:math_equation_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/multiplechoiceinput:multiple_choice_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/numberwithunits:number_with_units_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/numericexpressioninput:numeric_expression_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/numericinput:numeric_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/ratioinput:ratio_input_module",
        "//domain/src/main/java/org/oppia/android/domain/classify/rules/textinput:text_input_rule_module",
        "//domain/src/main/java/org/oppia/android/domain/devoptions:show_all_hints_and_solution_controller",
        "//domain/src/main/java/org/oppia/android/domain/exploration:exploration_data_controller",
        "//domain/src/main/java/org/oppia/android/domain/exploration:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/exploration/testing:fake_exploration_retriever",
        "//domain/src/main/java/org/oppia/android/domain/exploration/testing:test_module",
        "//domain/src/main/java/org/oppia/android/domain/hintsandsolution:fast_show_test_config_module",
        "//domain/src/main/java/org/oppia/android/domain/hintsandsolution:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/hintsandsolution:standard_prod_config_module",
        "//domain/src/main/java/org/oppia/android/domain/onboarding:retriever_prod_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger:oppia_logger",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/analytics:analytics_startup_listener",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/analytics:controller",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/analytics:cpu_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/analytics:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/logscheduler:metric_log_scheduler_module",
        "//domain/src/main/java/org/oppia/android/domain/oppialogger/loguploader:worker_module",
        "//domain/src/main/java/org/oppia/android/domain/platformparameter:platform_parameter_controller",
        "//domain/src/main/java/org/oppia/android/domain/platformparameter:prod_config_module",
        "//domain/src/main/java/org/oppia/android/domain/platformparameter:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/platformparameter/syncup:platform_parameter_sync_up_worker",
        "//domain/src/main/java/org/oppia/android/domain/platformparameter/syncup:platform_parameter_sync_up_worker_factory",
        "//domain/src/main/java/org/oppia/android/domain/profile:profile_management_controller",
        "//domain/src/main/java/org/oppia/android/domain/question:constants_provider",
        "//domain/src/main/java/org/oppia/android/domain/question:question_module",
        "//domain/src/main/java/org/oppia/android/domain/spotlight:spotlight_state_controller",
        "//domain/src/main/java/org/oppia/android/domain/topic:developer_assets",
        "//domain/src/main/java/org/oppia/android/domain/topic:prod_module",
        "//domain/src/main/java/org/oppia/android/domain/topic:story_progress_controller",
        "//domain/src/main/java/org/oppia/android/domain/translation:translation_controller",
        "//domain/src/main/java/org/oppia/android/domain/workmanager:prod_module",
        "//model/src/main/proto:arguments_java_proto_lite",
        "//model/src/main/proto:event_logger_java_proto_lite",
        "//model/src/main/proto:exploration_checkpoint_java_proto_lite",
        "//model/src/main/proto:exploration_java_proto_lite",
        "//model/src/main/proto:interaction_object_java_proto_lite",
        "//model/src/main/proto:languages_java_proto_lite",
        "//model/src/main/proto:math_java_proto_lite",
        "//model/src/main/proto:platform_parameter_java_proto_lite",
        "//model/src/main/proto:profile_java_proto_lite",
        "//model/src/main/proto:screens_java_proto_lite",
        "//model/src/main/proto:spotlight_java_proto_lite",
        "//model/src/main/proto:subtitled_html_java_proto_lite",
        "//model/src/main/proto:thumbnail_java_proto_lite",
        "//model/src/main/proto:topic_java_proto_lite",
        "//testing/src/main/java/org/oppia/android/testing:assertion_helpers",
        "//testing/src/main/java/org/oppia/android/testing:fake_analytics_event_logger",
        "//testing/src/main/java/org/oppia/android/testing:fake_exception_logger",
        "//testing/src/main/java/org/oppia/android/testing:fake_performance_metrics_event_logger",
        "//testing/src/main/java/org/oppia/android/testing:oppia_test_rule",
        "//testing/src/main/java/org/oppia/android/testing:rich_text_view_matcher",
        "//testing/src/main/java/org/oppia/android/testing:test_image_loader_module",
        "//testing/src/main/java/org/oppia/android/testing:test_log_reporting_module",
        "//testing/src/main/java/org/oppia/android/testing/data:data_provider_test_monitor",
        "//testing/src/main/java/org/oppia/android/testing/environment:test_environment_config",
        "//testing/src/main/java/org/oppia/android/testing/espresso:edit_text_input_action",
        "//testing/src/main/java/org/oppia/android/testing/espresso:generic_view_matchers",
        "//testing/src/main/java/org/oppia/android/testing/espresso:image_view_matcher",
        "//testing/src/main/java/org/oppia/android/testing/espresso:konfetti_view_matcher",
        "//testing/src/main/java/org/oppia/android/testing/espresso:text_input_action",
        "//testing/src/main/java/org/oppia/android/testing/junit:define_app_language_locale_context",
        "//testing/src/main/java/org/oppia/android/testing/junit:initialize_default_locale_rule",
        "//testing/src/main/java/org/oppia/android/testing/lightweightcheckpointing:exploration_checkpoint_test_helper",
        "//testing/src/main/java/org/oppia/android/testing/logging:event_log_subject",
        "//testing/src/main/java/org/oppia/android/testing/mockito",
        "//testing/src/main/java/org/oppia/android/testing/network",
        "//testing/src/main/java/org/oppia/android/testing/network:test_module",
        "//testing/src/main/java/org/oppia/android/testing/platformparameter:test_module",
        "//testing/src/main/java/org/oppia/android/testing/profile:profile_test_helper",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:is_on_robolectric",
        "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
        "//testing/src/main/java/org/oppia/android/testing/story:story_progress_test_helper",
        "//testing/src/main/java/org/oppia/android/testing/threading:coroutine_executor_service",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_coroutine_dispatchers",
        "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
        "//testing/src/main/java/org/oppia/android/testing/time:fake_oppia_clock",
        "//testing/src/main/java/org/oppia/android/testing/time:test_module",
        "//third_party:androidx_annotation_annotation",
        "//third_party:androidx_appcompat_appcompat",
        "//third_party:androidx_constraintlayout_constraintlayout",
        "//third_party:androidx_core_core",
        "//third_party:androidx_core_core-ktx",
        "//third_party:androidx_databinding_databinding-common",
        "//third_party:androidx_drawerlayout_drawerlayout",
        "//third_party:androidx_fragment_fragment",
        "//third_party:androidx_lifecycle_lifecycle-livedata-core",
        "//third_party:androidx_navigation_navigation-ui",
        "//third_party:androidx_recyclerview_recyclerview",
        "//third_party:androidx_test_core",
        "//third_party:androidx_test_espresso_espresso-contrib",
        "//third_party:androidx_test_espresso_espresso-core",
        "//third_party:androidx_test_espresso_espresso-intents",
        "//third_party:androidx_test_ext_junit",
        "//third_party:androidx_test_rules",
        "//third_party:androidx_viewpager2_viewpager2",
        "//third_party:androidx_work_work-runtime",
        "//third_party:androidx_work_work-runtime-ktx",
        "//third_party:androidx_work_work-testing",
        "//third_party:com_github_bumptech_glide_glide",
        "//third_party:com_github_bumptech_glide_mocks",
        "//third_party:com_google_android_material_material",
        "//third_party:com_google_guava_guava",
        "//third_party:com_google_protobuf_protobuf-javalite",
        "//third_party:com_google_truth_truth",
        "//third_party:com_squareup_okhttp3_okhttp",
        "//third_party:com_squareup_retrofit2_converter-moshi",
        "//third_party:com_squareup_retrofit2_retrofit",
        "//third_party:com_squareup_retrofit2_retrofit-mock",
        "//third_party:javax_inject_javax_inject",
        "//third_party:junit_junit",
        "//third_party:kotlinx-coroutines-core-jvm",
        "//third_party:org_hamcrest_hamcrest-core",
        "//third_party:org_hamcrest_hamcrest-library",
        "//third_party:org_mockito_mockito-core",
        "//third_party:org_robolectric_annotations",
        "//third_party:org_robolectric_shadows-framework",
        "//utility:resources",
        "//utility/src/main/java/org/oppia/android/util/accessibility",
        "//utility/src/main/java/org/oppia/android/util/accessibility:test_module",
        "//utility/src/main/java/org/oppia/android/util/accessibility:testing",
        "//utility/src/main/java/org/oppia/android/util/caching:annotations",
        "//utility/src/main/java/org/oppia/android/util/caching:asset_prod_module",
        "//utility/src/main/java/org/oppia/android/util/caching:topic_list_to_cache",
        "//utility/src/main/java/org/oppia/android/util/caching/testing:caching_test_module",
        "//utility/src/main/java/org/oppia/android/util/data:async_result",
        "//utility/src/main/java/org/oppia/android/util/data:data_provider",
        "//utility/src/main/java/org/oppia/android/util/data:data_providers",
        "//utility/src/main/java/org/oppia/android/util/extensions:bundle_extensions",
        "//utility/src/main/java/org/oppia/android/util/extensions:context_extensions",
        "//utility/src/main/java/org/oppia/android/util/gcsresource:annotations",
        "//utility/src/main/java/org/oppia/android/util/gcsresource:prod_module",
        "//utility/src/main/java/org/oppia/android/util/locale:android_locale_factory",
        "//utility/src/main/java/org/oppia/android/util/locale:impl",
        "//utility/src/main/java/org/oppia/android/util/locale:oppia_bidi_formatter",
        "//utility/src/main/java/org/oppia/android/util/locale:oppia_locale",
        "//utility/src/main/java/org/oppia/android/util/locale:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging:annotations",
        "//utility/src/main/java/org/oppia/android/util/logging:current_app_screen_name_intent_decorator",
        "//utility/src/main/java/org/oppia/android/util/logging:event_logger",
        "//utility/src/main/java/org/oppia/android/util/logging:exception_logger",
        "//utility/src/main/java/org/oppia/android/util/logging:log_level",
        "//utility/src/main/java/org/oppia/android/util/logging:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging:standard_event_logging_configuration_module",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:debug_event_logger",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:prod_module",
        "//utility/src/main/java/org/oppia/android/util/logging/performancemetrics:performance_metrics_assessor_module",
        "//utility/src/main/java/org/oppia/android/util/logging/performancemetrics:performance_metrics_configurations_module",
        "//utility/src/main/java/org/oppia/android/util/logging/performancemetrics:performance_metrics_event_logger",
        "//utility/src/main/java/org/oppia/android/util/math:fraction_parser",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_module",
        "//utility/src/main/java/org/oppia/android/util/networking:debug_util_module",
        "//utility/src/main/java/org/oppia/android/util/networking:network_connection_util",
        "//utility/src/main/java/org/oppia/android/util/parser/html:html_parser",
        "//utility/src/main/java/org/oppia/android/util/parser/html:html_parser_entity_type_module",
        "//utility/src/main/java/org/oppia/android/util/parser/html:list_item_leading_margin_span",
        "//utility/src/main/java/org/oppia/android/util/parser/html:policy_type",
        "//utility/src/main/java/org/oppia/android/util/parser/image:glide_image_loader_module",
        "//utility/src/main/java/org/oppia/android/util/parser/image:image_loader",
        "//utility/src/main/java/org/oppia/android/util/parser/image:image_parsing_module",
        "//utility/src/main/java/org/oppia/android/util/parser/image:image_transformation",
        "//utility/src/main/java/org/oppia/android/util/parser/image:test_glide_image_loader",
        "//utility/src/main/java/org/oppia/android/util/parser/math:math_latex_model",
        "//utility/src/main/java/org/oppia/android/util/platformparameter",
        "//utility/src/main/java/org/oppia/android/util/threading:annotations",
    ],
)

[oppia_android_test(
    name = test_file_path[:test_file_path.find(".kt")] if "/" in test_file_path else test_file_path,
    srcs = [],
    temp_test_class_migration = test_file_path[test_file_path.find("src/test/java/") + len("src/test/java/"):test_file_path.find(".kt")].replace("/", "."),
    deps = [":_combined_test_lib_do_not_depend"],
) for test_file_path in glob(["src/test/java/org/oppia/android/app/**/*Test.kt"])]

[oppia_android_test(
    name = test_file_path[:test_file_path.find(".kt")] if "/" in test_file_path else test_file_path,
    srcs = [],
    temp_test_class_migration = test_file_path[test_file_path.find("src/sharedTest/java/") + len("src/sharedTest/java/"):test_file_path.find(".kt")].replace("/", "."),
    deps = [":_combined_test_lib_do_not_depend"],
) for test_file_path in glob(["src/sharedTest/java/org/oppia/android/app/**/*Test.kt"])]

# TODO(#1566): Move Firebase rules to their own package & remove default visibility
# Package for all Firebase dependencies.
# To reference these dependencies, add '//app:crashlytics' and '//app:crashlytics_deps'
# to your build rule's dependency list.

crashlytics_android_library(
    name = "_crashlytics",
    package_name = "org.oppia.android",
    build_id = "48fc9d17-e102-444c-8e0d-638d75ec0942",
    resource_files = google_services_xml(
        package_name = "org.oppia.android",
        google_services_json = "google-services.json",
    ),
)

android_library(
    name = "crashlytics_deps",
    visibility = [
        "//:oppia_binary_visibility",
        "//:oppia_testing_visibility",
        "//instrumentation:__pkg__",
        "//utility/src/main/java/org/oppia/android/util/logging/firebase:__pkg__",
    ],
    exports = [
        ":_crashlytics",
        "//third_party:com_google_firebase_firebase-crashlytics",
    ],
)
