# TODO(#1532): Rename file to 'BUILD' post-Gradle.
"""
This library provides data to the rest of the application.
"""

load("@dagger//:workspace_defs.bzl", "dagger_rules")
load("//data:data_test.bzl", "data_test")

# keep sorted
TEST_DEPS = [
    ":dagger",
    "//data/src/main/java/org/oppia/android/data/backends/gae:network_config_prod_module",
    "//data/src/main/java/org/oppia/android/data/backends/gae:oppia_retrofit",
    "//data/src/main/java/org/oppia/android/data/backends/gae:prod_module",
    "//data/src/main/java/org/oppia/android/data/backends/gae/model",
    "//data/src/main/java/org/oppia/android/data/persistence:cache_store",
    "//model/src/main/proto:test_models",
    "//testing",
    "//testing/src/main/java/org/oppia/android/testing/data:async_result_subject",
    "//testing/src/main/java/org/oppia/android/testing/data:data_provider_test_monitor",
    "//testing/src/main/java/org/oppia/android/testing/network",
    "//testing/src/main/java/org/oppia/android/testing/network:test_module",
    "//testing/src/main/java/org/oppia/android/testing/platformparameter:test_constants",
    "//testing/src/main/java/org/oppia/android/testing/robolectric:test_module",
    "//testing/src/main/java/org/oppia/android/testing/threading:test_module",
    "//third_party:androidx_test_ext_junit",
    "//third_party:com_google_truth_truth",
    "//third_party:com_squareup_okhttp3_mockwebserver",
    "//third_party:com_squareup_retrofit2_converter-moshi",
    "//third_party:com_squareup_retrofit2_retrofit",
    "//third_party:com_squareup_retrofit2_retrofit-mock",
    "//third_party:junit_junit",
    "//third_party:moshi",
    "//third_party:org_robolectric_annotations",
    "//third_party:robolectric_android-all",
    "//utility",
]

# Qualified file paths for test classes that have been migrated over to their own packages &
# shouldn't be defined as module-level tests.
# keep sorted
MIGRATED_TESTS = [
]

[data_test(
    name = test_file_path,
    filtered_tests = MIGRATED_TESTS,
    deps = TEST_DEPS,
) for test_file_path in glob(["src/test/java/org/oppia/android/data/**/*Test.kt"])]

dagger_rules()
